# medical-autoresearch

./: .gitignore  .multitask_loop_plan.md  .phenotyping_loop_plan.md  BASELINES.md  CLAUDE.md  README.md  SUMMARY.md  prepare.py  program.md  pyproject.toml  results.tsv  train.py
scripts/: mimic_safe_check.sh  run.sh
tests/: test_prepare.py  test_train.py
