[project]
name = "medical-autoresearch"
version = "0.1.0"
description = "Autonomous RL research for clinical prediction, combining autoresearch + PyHealth"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "torch>=2.1.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
pyhealth = [
    "pyhealth>=1.1.0",
    "rdkit",
]
